--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,11 +2,19 @@ html, body, #root {
     height: 100%;
     text-align: center;
     font-size: x-large;
-    background-image: linear-gradient(magenta, darkmagenta);
-    color: white;
+    /* background-image: linear-gradient(white, lightgray);
+    background-size: cover; */
+    background-color: whitesmoke;
+    color: #333333;
+    font-size: 16px;
+    font-family: sans-serif;
 }
 
 a {
-    color: blue;
+    color: #333333;
+    text-decoration: none;
 }
 
+a:hover{
+    color: orangered;
+}
