--- a/Frontend/src/Components/DataArea/RouteCard/RouteCard.css
+++ b/Frontend/src/Components/DataArea/RouteCard/RouteCard.css
@@ -25,14 +25,28 @@
   background-color: #333333;
   color: whitesmoke;
   padding: 10px;
-  font-size: 27px;
+  font-size: 30px;
   font-weight: bold;
   border-radius: 2px;
+  margin-top: 0;
+  height: 40px;
 }
 
 .duration-distance {
   text-align: left;
   font-style: italic;
+}
+
+.duration-distance > p {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.location {
+  width: 150px;
+  white-space: normal;
 }
 
 .title{
