--- a/Frontend/src/Components/DataArea/RoutesList/RoutesList.css
+++ b/Frontend/src/Components/DataArea/RoutesList/RoutesList.css
@@ -1,8 +1,43 @@
 .RoutesList {
-	padding-top: 5rem;
+	/* padding-top: 5rem; */
 	display: flex;
 	flex-direction: row;
 	gap: 20px;
 	flex-wrap: wrap;
 	justify-content: center;
 }
+
+.start-title {
+	padding-top: 4.5rem;
+	margin: 0;
+	margin-bottom: 20px;
+}
+
+.search-filter {
+	margin-bottom: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+		align-items: center;
+	gap: 20px;
+}
+
+.search {
+	display: flex;
+	align-items: center;
+}
+
+.search > input {
+	padding: 10px;
+	border-radius: 15px;
+	border: 2px solid darkgray;
+}
+
+.filter {
+	background-color: darkgray;
+	padding: 10px;
+	border-radius: 15px;
+	/* color: black; */
+	font-weight: bold;
+}
+
