--- a/Frontend/src/Components/DataArea/RouteCard/RouteCard.css
+++ b/Frontend/src/Components/DataArea/RouteCard/RouteCard.css
@@ -1,4 +1,5 @@
 .RouteCard {
+  position: relative;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -57,4 +58,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.fav{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 3%;
+  right: 3%;
+  cursor: pointer;
+  transform: scale(1.2);
 }
