--- a/Frontend/src/Components/DataArea/RouteDetails/RouteDetails.css
+++ b/Frontend/src/Components/DataArea/RouteDetails/RouteDetails.css
@@ -1,3 +1,118 @@
 .RouteDetails {
-	
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  border: transparent;
+  width: 50%;
+  margin: 0 auto;
 }
+
+.card {
+  display: flex;
+  margin: 20px; 
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+}
+
+/* CARD HEAD */
+.head {
+  display: flex;
+  text-align: left;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.title > h2 {
+  font-size: 40px;
+  margin: 0;
+}
+
+.title > p {
+  font-size:  13px;
+  margin: 0;
+}
+
+.difficulty {
+  display: flex;
+  align-items: center;
+}
+
+.date-time{
+  margin-top: 20px;
+}
+
+.time {
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.date {
+  text-align: center;
+}
+
+.time p:nth-child(2) {
+  color:goldenrod;
+}
+
+.body {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.image-slider > img {
+  width: 80%;
+  height: 100%;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.50);
+  /* margin-left: -20%; */
+  transform: scale(1.1);
+}
+
+.dateCountdown{
+  width: 25%;
+}
+
+.dateCountdown > p{
+  font-weight: bold;
+  margin: 0;
+}
+
+.dateCountdown > div {
+  padding: 10px;
+  border: 1px solid;
+}
+
+/*
+.image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.details {
+  flex: 2;
+  margin-left: 20px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.dates {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 16px;
+  line-height: 1.5;
+}  */
