--- a/Frontend/src/Components/DataArea/RoutesList/RoutesList.css
+++ b/Frontend/src/Components/DataArea/RoutesList/RoutesList.css
@@ -63,3 +63,12 @@
 	padding-right: 5px;
 }
 
+.selected > button {
+	padding: 10px;
+	border-radius: 15px;
+	border: 2px solid darkgray;
+	font-size: 16px;
+	background-color: white;
+	cursor: pointer;
+}
+
